--- a/accessory/index.html
+++ b/accessory/index.html
@@ -86,5 +86,6 @@
             document.getElementById("totalWithVAT").textContent = totalWithVAT.toFixed(2);
         }
     </script>
+    Made by <a href="about.html">Nan Ei</a>
 </body>
 </html>
